testdata/baselines/reference/submodule/conformance/nodeModulesJson.errors.txt
/loosey.cts(1,20): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/loosey.cts(1,36): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/loosey.cts(2,21): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/loosey.cts(3,25): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/loosey.cts(4,26): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/main.mts(2,22): error TS2307: Cannot find module 'actually-json' or its corresponding type declarations.
/main.mts(5,20): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/main.mts(5,36): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/main.mts(6,36): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/main.mts(6,52): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/main.mts(7,21): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/main.mts(8,25): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/main.mts(8,41): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/main.mts(9,26): error TS2307: Cannot find module './config.json' or its corresponding type declarations.
/main.mts(9,42): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.


==== /node_modules/not.json/package.json (0 errors) ====
    {
      "name": "not.json",
      "version": "1.0.0",
      "type": "module",
      "exports": "./index.js"
    }
    
==== /node_modules/not.json/index.d.ts (0 errors) ====
    export function oops(json: string): any;
    
==== /node_modules/actually-json/package.json (0 errors) ====
    {
      "name": "actually-json",
      "version": "1.0.0",
      "type": "module",
      "exports": {
        ".": "./index.json",
        "./typed": "./typed.d.json.ts"
      }
    }
    
==== /node_modules/actually-json/index.json (0 errors) ====
    {}
    
==== /node_modules/actually-json/typed.d.json.ts (0 errors) ====
    declare const _default: {};
    export default _default;
    
==== /config.json (0 errors) ====
    {
      "version": 1
    }
    
==== /main.mts (10 errors) ====
    import { oops } from "not.json"; // Ok
    import moreOops from "actually-json"; // Error
                         ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'actually-json' or its corresponding type declarations.
    import typed from "actually-json/typed"; // Error
    
    import config from "./config.json" with { type: "json" }; // Ok
                       ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
                                       ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import { default as config1 } from "./config.json" with { type: "json" }; // Ok
                                       ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
                                                       ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import config2 from "./config.json"; // Error, no attribute
                        ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
    import { version } from "./config.json" with { type: "json" }; // Error, named import
                            ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
                                            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import * as config3 from "./config.json" with { type: "json" };
                             ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
                                             ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    config3.version; // Error
    config3.default; // Ok
    
==== /loosey.cts (5 errors) ====
    import config from "./config.json" with { type: "json" }; // Error
                       ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
                                       ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import config2 from "./config.json"; // Ok
                        ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
    import { version } from "./config.json"; // Ok
                            ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
    import * as config3 from "./config.json";
                             ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './config.json' or its corresponding type declarations.
    config3.version; // Ok
    config3.default; // Error
    